--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     url: jdbc:mysql://localhost:3306/movies?useSSL=false
     username: root
 
+  logging.level:
+    root: INFO
+    org.superbiz.moviefun: DEBUG
+
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
